--- a/src/components/expenses/ExpenseItem.css
+++ b/src/components/expenses/ExpenseItem.css
@@ -24,8 +24,12 @@
   justify-content: flex-start;
   flex: 1;
 }
+
+.expense-description-title {
+  text-transform: capitalize;
+  letter-spacing: 1px;
+}
 .expense-item h2 {
-  color: #3a3a3a;
   font-size: 1rem;
   flex: 1;
   margin: 0 1rem;
